# harmony_metronome_apk_app

./: .gitignore  aa.csr  aa.p12  build-profile.json5  harmony_metrome_apk_app.cer  harmony_metrome_apk_appRelease.p7b  hvigorfile.ts  oh-package.json5
.hvigor/cache/: file-cache.json  task-cache.json
.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
.hvigor/dependencyMap/entry/: oh-package.json5
.hvigor/outputs/logs/details/: details.json
.hvigor/outputs/sync/: fileCache.json  output.json
.hvigor/report/: report-202602240046151750.json
AgentContext/: layout_after_click.json  layout_playing_2.json  metrome-offline-debug-profile.json  metrome_layout.json
AgentContext/20260223-harmony-metronome/: CodeReview-Report.md  Coordinate.md  Progress.md  TASK_BREAKDOWN.md  TestSteps.md  test_report.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
Memory/: 20260223-harmony-metronome.md
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  native_metronome_engine.cpp  native_metronome_engine.h
entry/src/main/cpp/types/libmetronome_native/: index.d.ts  oh-package.json5
entry/src/main/ets/audio/: AudioOutputService.ts  MetronomeEngine.ts  NativeMetronomeEngine.ts  VoiceSampleBank.ts
entry/src/main/ets/common/: AppInfo.ts
entry/src/main/ets/data/: PreferencesManager.ts
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/ohosTest/: module.json5
entry/src/test/: List.test.ets
tools/: generate_store_screenshots.py
(+12 files in other folders)
